feat: finalizar implementação do CRUD de Pessoa com DTOs e Mappers